# comisiondeservicios

./: .gitignore  README.md  generate.py  pyproject.toml  setup.cfg
csus/: config.yaml  cservicio.docx  cservicio.j2  cservicios.j2  cservicios.py  escrito_explicativo.j2  generate.py  licencia.j2
csus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: ejemplo.yaml
modelos/: Escrito explicativo.docx  Licencias de 3 meses o superior 22-04-2021.docx  licencia-hasta-3-meses-de-duracion 05-02-2021.doc
template/: cs.j2
tests/: csdatos.yaml  csdatos_cservicios.tex  csdatos_escrito_explicativo.tex  csdatos_licencia.tex  test.tex  test.yaml  test_cservicio.tex  test_cservicios.tex  test_licencia.tex
tests/data/: ejemplo.yaml  viaje.yaml
tex/: cs.tex
