[metadata]
name = csus
version = 0.0.1
aruthor= Fernando Muro
author_email = fmuro@us.es
description = Comisión de servicios de la Universidad de Sevilla en PDF/LaTeX
license = GPL-3.0

[options]
packages = csus
install_requires =
    PyYAML
    Jinja2
    python-dateutil

[options.entry_points]
console_scripts =
    cservicios = csus.generate:funcion

[options.package_data]
csus = *