[metadata]
name = csus
version = 0.0.5
author= Fernando Muro
author_email = fmuro@us.es
description = Comisión de servicios de la Universidad de Sevilla en PDF/LaTeX
license = GPL-3.0

[options]
packages = csus
install_requires =
    PyYAML
    Jinja2
    python-dateutil
    appdirs

[options.entry_points]
console_scripts =
    cservicios = csus.cservicios:funcion

[options.package_data]
csus = *